# num-analysis

./: .editorconfig  .eslintrc.json  .gitignore  .npmrc  .prettierrc  README.md  a.ts  app.json  babel.config.js  biome.jsonc  bun.lockb  commitlinterrc.json  eslint.config.ts  jest.config.ts  metro.config.js  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
.githooks/: pre-commit
frontend/: next.config.ts  package.json  postcss.config.mjs  tsconfig.json
frontend/src/: App.css  App.tsx
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx  styles.module.css
frontend/src/components/: Table.tsx  TablePan.tsx
frontend/src/context/: error.tsx  methodData.tsx
frontend/src/i18n/: request.ts
frontend/src/lib/: providers.tsx  storage.ts
frontend/src/styles/: theme.ts
frontend/src/utils/: digitFromSuperscript.ts  index.ts
numerical-methods/: package.json  tsconfig.json
numerical-methods/src/: custom.ts  functionZeros.ts  index.ts  integration.ts  interpolation.ts  linearSystems.ts
src-tauri/: Cargo.toml
src/@types/: images.d.ts
src/app/: _layout.tsx  globals.css  index.tsx  layout.tsx  not-found.tsx  page.tsx
src/app/[method]/: _layout.tsx
src/app/lib/: providers.tsx
src/components/BottomBar/: Tile.tsx  index.tsx
src/components/Checkbox/: index.tsx
src/components/Header/: index.tsx
src/i18n/: index.ts  pt.json
src/units/: index.ts
(+32 files in other folders)
