[package]
name = "NumAnalysis"
version = "1.0.0"
description = ""
authors = ["Aran Leite"]
edition = "2024"

[lib]
name = "num_analysis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
